When showing a document viewer, don't start layout on the documnt unless it's already had layout started once.  Otherwise, just wait for the sink, or whoever is responsible for it, to start layout once they're ready.  Bug 404470, r+sr=jst