content/base/src/nsDocument.cpp
@@ -1453,6 +1453,8 @@ nsDocument::StartDocumentLoad(const char* aCommand, nsIChannel* aChannel,
     CSSLoader()->SetEnabled(PR_FALSE); // Do not load/process styles when loading as data
   }
 
+  mMayStartLayout = PR_FALSE;
+
   if (aReset) {
     Reset(aChannel, aLoadGroup);
   }
